--- a/Relazione/Relazione_MSA.tex
+++ b/Relazione/Relazione_MSA.tex
@@ -37,9 +37,9 @@
 %	DOCUMENT INFORMATION
 %----------------------------------------------------------------------------------------
 
-\title{Determination of the Atomic \\ Weight of Magnesium \\ CHEM 101} % Title
+\title{Connettore Publish-Subscribe Content-Based adeguato ad ambiente Mobile per mezzo di politiche adattive } % Title
 
-\author{John \textsc{Smith}} % Author name
+\author{Stefano \textsc{Agostini} Matricola: 0234240 \\ Paolo \textsc{Salom\'e} Matricola: 1234567 \\ Alessandro \textsc{Valenti} Matricola: 1234567} % Author name
 
 \date{\today} % Date for the report
 
@@ -47,14 +47,14 @@
 
 \maketitle % Insert the title, author and date
 
-\begin{center}
-\begin{tabular}{l r}
-Date Performed: & January 1, 2012 \\ % Date the experiment was performed
-Partners: & James Smith \\ % Partner names
-& Mary Smith \\
-Instructor: & Professor Smith % Instructor/supervisor
-\end{tabular}
-\end{center}
+%\begin{center}
+%\begin{tabular}{l r}
+%Date Performed: & January 1, 2012 \\ % Date the experiment was performed
+%Partners: & James Smith \\ % Partner names
+%& Mary Smith \\
+%Instructor: & Professor Smith % Instructor/supervisor
+%\end{tabular}
+%\end{center}
 
 % If you wish to include an abstract, uncomment the lines below
 % \begin{abstract}
@@ -65,7 +65,7 @@ Instructor: & Professor Smith % Instructor/supervisor
 %	SECTION 1
 %----------------------------------------------------------------------------------------
 
-\section{Objective}
+\section{Introduzione}
 
 To determine the atomic weight of magnesium via its reaction with oxygen and to study the stoichiometry of the reaction (as defined in \ref{definitions}):
 
@@ -79,14 +79,11 @@ To determine the atomic weight of magnesium via its reaction with oxygen and to 
 %Objective 2 text
 %\end{description}
 
-\subsection{Definitions}
-\label{definitions}
-\begin{description}
-\item[Stoichiometry]
-The relationship between the relative quantities of substances taking part in a reaction or forming a compound, typically a ratio of whole integers.
-\item[Atomic mass]
-The mass of an atom of a chemical element expressed in atomic mass units. It is approximately equivalent to the number of protons and neutrons in the atom (the mass number) or to the average number allowing for the relative abundances of different isotopes. 
-\end{description} 
+\subsection{Ambito del progetto e suoi obiettivi}
+
+\subsection{Servizi Cloud utilizzati e loro interazione}
+
+\subsection{Architettura generale}
  
 %----------------------------------------------------------------------------------------
 %	SECTION 2
